# cli-agent-orchestrator

./: .gitattributes  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  CAO-4.8-AGY-HANDOFF-TERMINAL-RETENTION.md  CAO-CUSTOMIZATIONS-PROGRESS.md  CAO-DISPATCH-UNKNOWN-RESOLUTION-2026-07-04.md  CAO-Tailscale-CHANGES-SUMMARY.md  CAO-WORKER-TOKEN-USAGE-PROVIDER-INVENTORY.md  CHANGELOG.md  CODEBASE.md  CONTRIBUTING.md  DEVELOPMENT.md  FORK-SYNC-CUSTOMIZATION-BRANCH-FLOW.md  GROK-CLI-TOKEN-NATIVE-IMPLEMENTATION-REVIEW-R2.md  GROK-CLI-TOKEN-NATIVE-IMPLEMENTATION-REVIEW.md  GROK-CLI-TOKEN-NATIVE-REVIEW-R2.md  GROK-CLI-TOKEN-USAGE-STATUS-REPORT.md  PLAN_CAO_ADD_GROK_CLI_PROVIDER_V2_1.md  PROMPT_PACK_CAO_GROK_CLI_PROVIDER_V1.md  README.md  README.zh-CN.md  REVIEW_0DF986D_MEMORY_SCOPE_ISOLATION_R3.md  REVIEW_0DF986D_MEMORY_SCOPE_ISOLATION_R3_REMEDIATION_REPORT.md  REVIEW_2EB1351_MEMORY_SCOPE_ISOLATION_R4.md  REVIEW_2EB1351_MEMORY_SCOPE_ISOLATION_R4_REMEDIATION_REPORT.md  REVIEW_A8019D4_MEMORY_SCOPE_ISOLATION.md  REVIEW_A8019D4_MEMORY_SCOPE_ISOLATION_REMEDIATION_REPORT.md  REVIEW_D433BA8_MEMORY_SCOPE_ISOLATION_R2.md  REVIEW_D433BA8_MEMORY_SCOPE_ISOLATION_R2_REMEDIATION_REPORT.md  SECURITY.md  mypy.ini  pyproject.toml
cao_mcp_apps/: README.md  package.json  (+2 more)
examples/fleet/panel/: README.md  pyproject.toml
examples/fleet/panel/app/: client.py  config.py  main.py
examples/fleet/panel/static/: ansi.js  app.js  console.js  fleet.js  follow.js  index.html  package.json  poller.js  schedule.js  screen.js  style.css  wall.js
examples/fleet/panel/systemd/: fleet-panel.service.example
(+699 files in other folders)
